Ensure that navigation is visible in mobile views

--- a/app/assets/stylesheets/hera/modules/_sidebar.scss
+++ b/app/assets/stylesheets/hera/modules/_sidebar.scss
@@ -289,7 +289,7 @@
 @include media-breakpoint-down(lg) {
   body,
   body:has(.main-sidebar.sidebar-collapsed) {
-    grid-template-columns: 0 1fr;
+    grid-template-columns: 1fr;
   }
 
   .sidebar {
